fixed alignment on blogteaser on home page

--- a/style.css
+++ b/style.css
@@ -375,7 +375,7 @@ div#blogteaser {
 	padding-right: 10px;
 	padding-top: 0px;
 	padding-bottom: 10px;
-	margin-bottom: 10px;
+	margin: 20px 10px 30px 10px;
 		-moz-box-shadow: 4px 4px 4px #000;
 	-webkit-box-shadow: 4px 4px 4px #000;
 	box-shadow: 0px 0px 10px #000;
